--- a/docs/docs/about/testimonials-quotes.mdx
+++ b/docs/docs/about/testimonials-quotes.mdx
@@ -11,41 +11,60 @@ If you would like to share your feedback with us, please [start a new discussion
 
 ## WM REPLY
 
-![WM Reply](../images/testimonials-companies-logo/wm-reply.png)
-
-In the era of implementing Copilot and Low Code technologies in organizations using the M365 platform, the CLI for M365 tool has become highly helpful for gathering data for advanced reports. These reports take into account many different tools based on M365, like Power Apps, Power Automate, SharePoint, Entra ID, making them extremely valuable in understanding and managing our clients’ environments.
-
-Company Site: https://www.reply.com/wm-reply
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img src={require('!!url-loader!../images/testimonials-companies-logo/wm-reply.png').default} alt='Voitanos' />
+    <p>Company Site: https://www.reply.com/wm-reply</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>In the era of implementing Copilot and Low Code technologies in organizations using the M365 platform, the CLI for M365 tool has become highly helpful for gathering data for advanced reports. These reports take into account many different tools based on M365, like Power Apps, Power Automate, SharePoint, Entra ID, making them extremely valuable in understanding and managing our clients’ environments.</p>
+  </div>
+</div>
 
 ## VOITANOS
 
-<img style={{background: '#ffffff', padding: 5 + 'px'}} src={require('!!url-loader!../images/testimonials-companies-logo/voitanos.svg').default} alt='Voitanos' />
-
-I love the CLI for M365 & recommend all my students! While Microsoft offers their own command line management tools, they aren’t as robust and you always have caveat them with “as long as you’re on Windows.” Today’s tools must work on any platform and when managing Microsoft 365, the CLI for Microsoft 365 is the only option that fits this standard. The community-based team has done a fantastic job continuously adding, improving, and updating commands to handle new scenarios that Microsoft releases, the quality of the CLI is top notch, and you can always trust it’s reliability… that’s a solid 👍👍 from this long-time Microsoft 365 developer!
-
-Company Site: https://www.voitanos.io/
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img style={{background: '#ffffff', padding: 5 + 'px'}} src={require('!!url-loader!../images/testimonials-companies-logo/voitanos.svg').default} alt='Voitanos' />
+    <p>Company Site: https://www.voitanos.io/</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>I love the CLI for M365 & recommend all my students! While Microsoft offers their own command line management tools, they aren’t as robust and you always have caveat them with “as long as you’re on Windows.” Today’s tools must work on any platform and when managing Microsoft 365, the CLI for Microsoft 365 is the only option that fits this standard. The community-based team has done a fantastic job continuously adding, improving, and updating commands to handle new scenarios that Microsoft releases, the quality of the CLI is top notch, and you can always trust it’s reliability… that’s a solid 👍👍 from this long-time Microsoft 365 developer!</p>
+  </div>
+</div>
 
 ## 👑LUISE FREESE
 
-![LEGO Luise Freese](../images/testimonials-companies-logo/lego-cli.png)
-
-Using CLI for Microsoft 365 has been such a game-changer for me. It's super simple to use, and the real-world examples in the documentation make it easy to pick up and start automating tasks right away. What I love most is the team behind it  ✨ - always open to feedback and constantly improving things based on what the community needs. I work at the intersection of Power Platform, Microsoft 365 and Power Platform and honestly, it’s one of those tools that once you start using, you wonder how you ever managed without it 💖!
-
-Profile: https://www.linkedin.com/in/luisefreese/
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img src={require('!!url-loader!../images/testimonials-companies-logo/lego-cli.png').default} alt='LEGO Luise Freese' />
+    <p>Profile: https://www.linkedin.com/in/luisefreese/</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>Using CLI for Microsoft 365 has been such a game-changer for me. It's super simple to use, and the real-world examples in the documentation make it easy to pick up and start automating tasks right away. What I love most is the team behind it  ✨ - always open to feedback and constantly improving things based on what the community needs. I work at the intersection of Power Platform, Microsoft 365 and Power Platform and honestly, it’s one of those tools that once you start using, you wonder how you ever managed without it 💖!</p>
+  </div>
+</div>
 
 ## PATRICK LAMBER (EasyLife 365)
 
-![EasyLife 365](../images/testimonials-companies-logo/pla-easy-life-365.png)
-
-At EasyLife 365, we enjoy using the CLI for Microsoft 365 to efficiently manage multi-service environments from one interface. Its flexibility saves time, helping us develop innovative applications that enhance governance in Microsoft 365 and fight chaos!
-
-Company Site: https://www.easylife365.cloud/
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img src={require('!!url-loader!../images/testimonials-companies-logo/pla-easy-life-365.png').default} alt='EasyLife 365' />
+    <p>Company Site: https://www.easylife365.cloud/</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>At EasyLife 365, we enjoy using the CLI for Microsoft 365 to efficiently manage multi-service environments from one interface. Its flexibility saves time, helping us develop innovative applications that enhance governance in Microsoft 365 and fight chaos!</p>
+  </div>
+</div>
 
 ## PAUL BULLOCK
 
-![Paul Bullock](../images/testimonials-companies-logo/paul.jpg)
-
-I’ve been watching the project for quite some time, it’s very high quality, backed by a very rich group of contributors that actively expand the product. It has a set of unique capabilities that complement other existing tools, great samples, great documentation. I’ve always seen the CLI for Microsoft 365 project as an exemplar to how to create and maintain an awesome community with a great tool! 
-
-Profile: https://linktr.ee/pkbullock
-
+<div className='row testimonial'>
+  <div className='col testimonial-image'>
+    <img src={require('!!url-loader!../images/testimonials-companies-logo/paul.jpg').default} alt='Paul Bullock' />
+    <p>Profile: https://linktr.ee/pkbullock</p>
+  </div>
+  <div className='col testimonial-quote'>
+    <p>I’ve been watching the project for quite some time, it’s very high quality, backed by a very rich group of contributors that actively expand the product. It has a set of unique capabilities that complement other existing tools, great samples, great documentation. I’ve always seen the CLI for Microsoft 365 project as an exemplar to how to create and maintain an awesome community with a great tool!</p>
+  </div>
+</div>
