Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -71,6 +71,7 @@ sidebar_position: 3
 - updated endpoint for [spo folder move](../cmd/spo/folder/folder-move.mdx) command [#6154](https://github.com/pnp/cli-microsoft365/issues/6154)
 - moved [spo folder copy](../cmd/spo/folder/folder-copy.mdx) to new endpoint [#6310](https://github.com/pnp/cli-microsoft365/issues/6310)
 - removed deprecated option from 'entra m365group user remove' [#6357](https://github.com/pnp/cli-microsoft365/issues/6357)
+- updated `teams cache remove` command to support the new client [#5998](https://github.com/pnp/cli-microsoft365/issues/5998)
 
 ## [v9.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.1.0)
 
