--- a/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
@@ -35,7 +35,13 @@ m365 spo listitem roleassignment remove [options]
 : The upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: The group name of the SharePoint group Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of the SharePoint group. Use this option exclusively for SharePoint Online groups. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group to remove. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group to remove. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `-f, --force`
 : Don't prompt for confirming removing the role assignment.
@@ -68,6 +74,12 @@ Remove roleassignment from list item getting list by url based on principal Id w
 
 ```sh
 m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl '/sites/contoso-sales/lists/Events' --listItemId 1 --principalId 2 --force
+```
+
+Remove roleassignment from list item getting list by url based on Entra group Id without prompting for confirmation
+
+```sh
+m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl '/sites/contoso-sales/lists/Events' --listItemId 1 --entraGroupId '27ae47f1-48f1-46f3-980b-d3c1470e398d' --force
 ```
 
 ## Response
