--- a/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/listitem/listitem-roleassignment-remove.mdx
@@ -29,13 +29,19 @@ m365 spo listitem roleassignment remove [options]
 : Id of the list item to remove the role from.
 
 `--principalId [principalId]`
-: SharePoint ID of principal it may be either user id or group id we want to remove permissions. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: SharePoint ID of principal it may be either user id or group id we want to remove permissions. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `--upn [upn]`
-: The upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The upn/email of user. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `--groupName [groupName]`
-: The group name of the SharePoint group Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: The group name of the SharePoint group. Use this option exclusively for SharePoint Online groups. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group to remove. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group to remove. Specify either `principalId`, `upn`, `groupName`, `entraGroupId`, or `entraGroupName`.
 
 `-f, --force`
 : Don't prompt for confirming removing the role assignment.
@@ -60,14 +66,20 @@ m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com
 Remove roleassignment from list item getting list by url based on principal Id
 
 ```sh
-m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl '/sites/contoso-sales/lists/Events' --listItemId 1 --principalId 2
+m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl "/sites/contoso-sales/lists/Events" --listItemId 1 --principalId 2
 ```
 
 
 Remove roleassignment from list item getting list by url based on principal Id without prompting for confirmation
 
 ```sh
-m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl '/sites/contoso-sales/lists/Events' --listItemId 1 --principalId 2 --force
+m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl "/sites/contoso-sales/lists/Events" --listItemId 1 --principalId 2 --force
+```
+
+Remove roleassignment from list item getting list by url based on Entra group Id without prompting for confirmation
+
+```sh
+m365 spo listitem roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --listUrl "/sites/contoso-sales/lists/Events" --listItemId 1 --entraGroupId "27ae47f1-48f1-46f3-980b-d3c1470e398d" --force
 ```
 
 ## Response
