--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -37,7 +37,7 @@ In the aftermath of renaming all Azure AD-related commands and options to Micros
 
 Instead of using `CLIMICROSOFT365_AADAPPID`, use `CLIMICROSOFT365_ENTRAAPPID` to store the Microsoft Entra app ID.
 
-### Removed deprecated CLI environment variables
+### Updated output of `status` command
 
 The command output of [status](./cmd/status.mdx) has been updated. Previously, the command returned `Logged out from Microsoft 365`, now it will simply return `Logged out`.
 
