Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,20 @@ sidebar_position: 3
 
 # Release notes
 
+## v10.1.0 (beta)
+
+### New commands
+
+**SharePoint Embedded:**
+
+- [spe container list](../cmd/spe/container/container-list.mdx) - lists containers of a specific Container Type [#6082](https://github.com/pnp/cli-microsoft365/issues/6082)
+- [spe containertype get](../cmd/spe/containertype/containertype-get.mdx) - retrieves a specific Container Type [#5991](https://github.com/pnp/cli-microsoft365/issues/5991)
+
+### Changes
+
+- fixed using env var for login command [#6469](https://github.com/pnp/cli-microsoft365/issues/6469)
+- updated v10 upgrade guidance [#6363](https://github.com/pnp/cli-microsoft365/issues/6363)
+
 ## [v10.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.0.0)
 
 ### New commands
