All entra m365group commands should accept displayName option

--- a/docs/docs/cmd/entra/m365group/m365group-remove.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-remove.mdx
@@ -53,7 +53,7 @@ m365 entra m365group remove --id 28beab62-7540-4db1-a23f-29a6018a3848
 Remove group with displayName _Finance_ without prompting for confirmation
 
 ```sh
-m365 entra m365group remove --displayName 28beab62-7540-4db1-a23f-29a6018a3848 --force
+m365 entra m365group remove --displayName Finance --force
 ```
 
 Remove group with id _28beab62-7540-4db1-a23f-29a6018a3848_ without prompting for confirmation and without moving it to the Recycle Bin
