Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -17,6 +17,7 @@ sidebar_position: 3
 
 - fixed using env var for login command [#6469](https://github.com/pnp/cli-microsoft365/issues/6469)
 - updated v10 upgrade guidance [#6363](https://github.com/pnp/cli-microsoft365/issues/6363)
+- fixed missing 'sp' aliases in some 'enterpriseapp' commands. [#6476](https://github.com/pnp/cli-microsoft365/issues/6476)
 
 ## [v10.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.0.0)
 
