Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -13,11 +13,22 @@ sidebar_position: 3
 - [spe container list](../cmd/spe/container/container-list.mdx) - lists containers of a specific Container Type [#6082](https://github.com/pnp/cli-microsoft365/issues/6082)
 - [spe containertype get](../cmd/spe/containertype/containertype-get.mdx) - retrieves a specific Container Type [#5991](https://github.com/pnp/cli-microsoft365/issues/5991)
 
+**Viva:**
+
+- [viva engage community set](../cmd/viva/engage/engage-community-set.mdx) - updates an existing Viva Engage community [#6279](https://github.com/pnp/cli-microsoft365/issues/6279)
+
 ### Changes
 
 - fixed using env var for login command [#6469](https://github.com/pnp/cli-microsoft365/issues/6469)
 - updated v10 upgrade guidance [#6363](https://github.com/pnp/cli-microsoft365/issues/6363)
-- fixed missing 'sp' aliases in some 'enterpriseapp' commands. [#6476](https://github.com/pnp/cli-microsoft365/issues/6476)
+- fixed missing 'sp' aliases in some 'enterpriseapp' commands [#6476](https://github.com/pnp/cli-microsoft365/issues/6476)
+- updated `entra m365group` commands to accept displayName option [#6147](https://github.com/pnp/cli-microsoft365/issues/6147)
+- updated linting to make it faster in GitHub workflows [#6348](https://github.com/pnp/cli-microsoft365/issues/6348)
+- enhanced `entra m365group get` with additional properties [#6148](https://github.com/pnp/cli-microsoft365/issues/6148)
+- enhanced `spo contenttype` commands with Parent expand [#6329](https://github.com/pnp/cli-microsoft365/issues/6329)
+- updated docs on how to log in to CLI [#6343](https://github.com/pnp/cli-microsoft365/issues/6343)
+- enhanced `graph subscription add` command with additional options [#6158](https://github.com/pnp/cli-microsoft365/issues/6158)
+- fixed syntax highlighting in docs
 
 ## [v10.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.0.0)
 
