Updates all sample scripts to align with v10. Closes #6369

--- a/docs/docs/sample-scripts/entra/bulk-manage-group-users/index.mdx
+++ b/docs/docs/sample-scripts/entra/bulk-manage-group-users/index.mdx
@@ -51,7 +51,7 @@ Note: Refactor the code as per your requirement.
           }
       }
       ElseIf ($action -eq "remove") {
-          m365 entra m365group user remove --groupId $group.id --userName $user.mail --force
+          m365 entra m365group user remove --groupId $group.id --userNames $user.mail --force
           Write-Host $user.mail " removed from " $group.mailNickname
       }
       Else {
