--- a/docs/docs/sample-scripts/spo/delete-non-group-connected-modern-sites/index.mdx
+++ b/docs/docs/sample-scripts/spo/delete-non-group-connected-modern-sites/index.mdx
@@ -30,7 +30,7 @@ When you delete Microsoft 365 groups, the modern group-connected team sites get 
       $progress++
       write-host $progress / $total":" $site.Title
       write-host $site.Url
-      m365 spo site remove --url $site.Url
+      m365 spo site remove --url $site.Url --force
   }
   ```
 
@@ -74,7 +74,7 @@ When you delete Microsoft 365 groups, the modern group-connected team sites get 
     siteUrl=$(echo ${site} | jq -r '.Url')
     echo "Deleting site..."
     echo $siteUrl
-    m365 spo site remove --url $siteUrl
+    m365 spo site remove --url $siteUrl --force
   done
   ```
 
