--- a/docs/docs/sample-scripts/spo/list-all-files-specific-name/index.mdx
+++ b/docs/docs/sample-scripts/spo/list-all-files-specific-name/index.mdx
@@ -42,7 +42,7 @@ This script will retrieve all the files in a site that have a specific word (i.e
       $i++
       if ($ShowProgress) { Write-Host "Processing '$($lib.Title)' - ($i/$($allLibs.length))" }
 
-      $allFiles = m365 spo file list --webUrl $site --folder $lib.Url --recursive -o json | ConvertFrom-Json
+      $allFiles = m365 spo file list --webUrl $site --folder $lib.RootFolder.ServerRelativeUrl --recursive -o json | ConvertFrom-Json
 
       foreach ($file in $allFiles) {
           if ($ShowProgress) { Write-Host "Processing file '$($file.ServerRelativeUrl)'" }
