--- a/docs/docs/sample-scripts/spo/remove-orphaned-redirect-sites/index.mdx
+++ b/docs/docs/sample-scripts/spo/remove-orphaned-redirect-sites/index.mdx
@@ -42,7 +42,7 @@ Changing the URL of a site results in a new site type: a Redirect Site. However 
         }
         If($body.StatusCode -eq "404"){
           Write-Host -f Red "  Target location no longer exists, should be removed"
-          m365 spo site remove --url $siteUrl
+          m365 spo site remove --url $siteUrl --force
         }
       }
     }
@@ -87,7 +87,7 @@ Changing the URL of a site results in a new site type: a Redirect Site. However 
     siteUrl=$(echo ${site} | jq -r '.Url')
     echo "Deleting site..."
     echo $siteUrl
-    m365 spo site remove --url $siteUrl
+    m365 spo site remove --url $siteUrl --force
   done
   ```
 
