--- a/docs/docs/sample-scripts/entra/replace-owner-with-a-different-one/index.mdx
+++ b/docs/docs/sample-scripts/entra/replace-owner-with-a-different-one/index.mdx
@@ -80,7 +80,7 @@ Find all the Microsoft 365 Groups that a user is an Owner of and replace them wi
 
               try {
                   Write-Host "Removing $oldUser permissions..."
-                  m365 entra m365group user remove --groupId $group.id --userName $oldUser | Get-CLIValue
+                  m365 entra m365group user remove --groupId $group.id --userNames $oldUser | Get-CLIValue
               }
               catch  {
                   Write-Host $_.Exception.Message -ForegroundColor Red
