--- a/docs/docs/cmd/spo/homesite/homesite-list.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-list.mdx
@@ -73,44 +73,35 @@ m365 spo homesite list
   <TabItem value="Text">
 
   ```text
-  LogoUrl: https://contoso.sharepoint.com/sites/intra/siteassets/work.png
-  SiteId : af80c11f-0138-4d72-bb37-514542c3aabb
-  Title  : Intranet
-  Url    : https://contoso.sharepoint.com/sites/intra
-  WebId  : 6f90666d-b0e7-40c3-991f-4ab051d00a70
+Url                                                              Title              
+---------------------------------------------------------------  -------------------
+https://reshmeeauckloo.sharepoint.com/sites/TheLanding           The Landing        
+https://reshmeeauckloo.sharepoint.com/sites/contosoportal        Contoso Electronics
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  SiteId,WebId,LogoUrl,Title,Url
-  af80c11f-0138-4d72-bb37-514542c3aabb,6f90666d-b0e7-40c3-991f-4ab051d00a70,https://contoso.sharepoint.com/sites/intra/siteassets/work.png,Intranet,https://contoso.sharepoint.com/sites/intra
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
   ```md
-  # spo homesite list
+  m365 spo homesite list --output md      
+# spo homesite list 
 
-  Date: 2/20/2023
+Date: 11/18/2024
 
-  ## Intranet (https://contoso.sharepoint.com/sites/intra)
+Property | Value
+---------|-------
 
-  Property | Value
-  ---------|-------
-  IsInDraftMode | false
-  SiteId | af80c11f-0138-4d72-bb37-514542c3aabb
-  WebId |6f90666d-b0e7-40c3-991f-4ab051d00a70
-  LogoUrl | https://contoso.sharepoint.com/sites/intra/siteassets/work.png
-  Title | Intranet
-  Url | https://contoso.sharepoint.com/sites/intra
-  ```
+```
 
   </TabItem>
 </Tabs>
 
 ## More information
 
-- SharePoint home sites: a landing for your organization on the intelligent intranet: [https://techcommunity.microsoft.com/t5/Microsoft-SharePoint-Blog/SharePoint-home-sites-a-landing-for-your-organization-on-the/ba-p/621933](https://techcommunity.microsoft.com/t5/Microsoft-SharePoint-Blog/SharePoint-home-sites-a-landing-for-your-organization-on-the/ba-p/621933)
+- SharePoint home sites [Viva Connections set up](https://learn.microsoft.com/en-us/viva/connections/set-up-admin-center)
